--- a/index.html
+++ b/index.html
@@ -494,14 +494,14 @@
   
   // Weather condition mapping for Open-Meteo weather codes
   const weatherCodes = {
-    0: 'Clear Sky', 1: 'Mainly Clear', 2: 'Partly Cloudy', 3: 'Overcast',
+    0: 'Clear Sky', 1: 'Mostly Clear', 2: 'Few Clouds', 3: 'Cloudy',
     45: 'Fog', 48: 'Depositing Rime Fog', 51: 'Light Drizzle', 53: 'Moderate Drizzle', 
     55: 'Dense Drizzle', 56: 'Light Freezing Drizzle', 57: 'Dense Freezing Drizzle',
-    61: 'Slight Rain', 63: 'Moderate Rain', 65: 'Heavy Rain', 66: 'Light Freezing Rain', 
-    67: 'Heavy Freezing Rain', 71: 'Slight Snow', 73: 'Moderate Snow', 75: 'Heavy Snow',
-    77: 'Snow Grains', 80: 'Slight Rain Showers', 81: 'Moderate Rain Showers', 
-    82: 'Violent Rain Showers', 85: 'Slight Snow Showers', 86: 'Heavy Snow Showers',
-    95: 'Thunderstorm', 96: 'Thunderstorm with Slight Hail', 99: 'Thunderstorm with Heavy Hail'
+    61: 'Light Rain', 63: 'Moderate Rain', 65: 'Heavy Rain', 66: 'Light Freezing Rain', 
+    67: 'Heavy Freezing Rain', 71: 'Light Snow', 73: 'Moderate Snow', 75: 'Heavy Snow',
+    77: 'Snow Grains', 80: 'Light Rain', 81: 'Moderate Rain', 
+    82: 'Heavy Rain', 85: 'Light Snow', 86: 'Snow Showers',
+    95: 'Thunderstorm', 96: 'Thunderstorm with Light Hail', 99: 'Thunderstorm with Heavy Hail'
   };
   
   // Function to get weather icon based on weather code and time
